--- a/Day05/04_pseudo2.html
+++ b/Day05/04_pseudo2.html
@@ -34,6 +34,7 @@
         </tr>
     </table>
     <p></p>
+    <div class="space"></div>
     <table border="1" class="second">
         <tr>
             <th>번호</th>
