--- a/Day05/07_font_style.html
+++ b/Day05/07_font_style.html
@@ -2,13 +2,34 @@
 <html>
 <head>
 
+
+    <link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">
     <style>
         /* 여기에 작성해보세요:) */
+        p.style1 {
+            /* font 단축속성 */
+            font: italic 30px arial, sans-serif;
+            /* 개별속성 */
+            font-style: italic;
+            font-size: 30px;
+            font-family: arial, sans-serif;
+        }
+        p.style2 {
+            font: bold 40px Georgia, serif;
+        }
+
+        p.style3 {
+            font-family: 'Stylish', sans-serif;
+            font-size: 30px;
+        }
+
     </style>
 </head>
 
 <body>
     <p class="style1">font: italic 30px arial,sans-serif</p>
     <p class="style2">font: bold 40px Georgia,serif</p>
+    <p class="style3">안녕하세요:) 스타일리쉬 폰트</p>
+
 </body>
 </html>
