--- a/Day05/07_web_font.html
+++ b/Day05/07_web_font.html
@@ -3,9 +3,18 @@
   <title>Web Font Test</title>
   <style>
    /* 여기에 작성해보세요:) */
+   @font-face {
+     font-family: 'NanumSquare Bold';
+     src: url("fonts/NanumSquareB.otf")
+   }
+
+   body { 
+     font-family: 'NanumSquare Bold';
+     font-size: 60px;
+   }
   </style>
 </head>
 <body>
-  이것이 모질라에서 제공하는 Vera Serif Bold입니다. 
+  이 글꼴은 네이버에서 제공하는 NanumSquare Bold입니다. 
 </body>
 </html>
