--- a/Day05/08_text_deco.html
+++ b/Day05/08_text_deco.html
@@ -3,6 +3,17 @@
 <head>
 <style>
 	/* 여기에 작성해보세요:) */		
+	.container {
+		margin: auto;
+		width: 900px;
+		padding: 50px;
+		border: 1px solid gray;
+	}
+
+	h1 { text-decoration: overline; }
+	h2 { text-decoration: line-through; }
+	h3 { text-decoration: underline; }
+	
 </style>
 </head>
 
