--- a/Day05/08_text_trans.html
+++ b/Day05/08_text_trans.html
@@ -3,14 +3,23 @@
 <head>
 <style>
 	/* 여기에 작성해보세요:) */
+	.container {
+		margin: auto;
+		width: 900px;
+		padding: 50px;
+		border: 1px solid gray;
+		font-size: 24px;
+	}
+
+	p.upper { text-transform: uppercase;}
+	p.lower { text-transform: lowercase; }
+	p.capit { text-transform: capitalize; }
 </style>
 </head>
-
-
 <body>
 	<div class="container">
 		<p class="upper">text_transform is uppercase.</p>
-		<p class="lower">text_transform is lowercase.</p>
+		<p class="lower">TEXT_TRANSFORM IS LOWERCASE.</p>
 		<p class="capit">text_transform is capitalize.</p>
 	</div>
 </body>
