--- a/Day05/08_word_wrap.html
+++ b/Day05/08_word_wrap.html
@@ -1,16 +1,30 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-
     <style>
         /* 여기에 작성해보세요:) */
+        .container {
+            margin: 0 auto;
+            width: 900px;
+            padding: 50px;
+            border: 1px solid gray;
+        }
+
+        p.test {
+            width: 11em;
+            border: 1px solid black;
+            /* 한 단어가 박스크기보다 더 길 때, 다음 줄로 단어를 넘긴다 */
+            word-wrap: break-word;
+        }
+
+
     </style>
 </head>
 <body>
     <div class="container">
         <p class="test">
             매우 긴 단어가 있는 경우에 자동으로 잘라준다.
-        aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+            aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
         </p>
     </div>
 
