--- a/Day17~20/index.html
+++ b/Day17~20/index.html
@@ -38,6 +38,12 @@
                     카테고리
                 </label>
             </div>
+            <!-- 모바일 햄버거 버튼 -->
+            <div class="mb-category">
+                <label for="category" class="mb-btn">
+                    <i class="fa fa-bars fa-lg" aria-hidden="true"></i>               
+                </label>
+            </div>
         </header>
 
         <!-- 사이드바 -->
@@ -60,8 +66,8 @@
             <div class="inner">
                 <ul>
                     <li><img src="img/slide01.jpg" alt="슬라이드01"></li>
-                    <li><img src="img/slide01.jpg" alt="슬라이드02"></li>
-                    <li><img src="img/slide01.jpg" alt="슬라이드03"></li>
+                    <li><img src="img/slide02.jpg" alt="슬라이드02"></li>
+                    <li><img src="img/slide03.jpg" alt="슬라이드03"></li>
                 </ul>
             </div>
         </section>
@@ -90,7 +96,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <p class="img"><img src="img/about01.jpg" alt="교육소개"></p>
+                        <p class="img"><img src="img/about02.jpg" alt="교육소개"></p>
                         <div class="text">
                             <h3>프로그래밍 과정</h3>
                             <p>파이썬 부터 JAVA 프로그래밍 까지</p>
@@ -104,7 +110,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <p class="img"><img src="img/about01.jpg" alt="교육소개"></p>
+                        <p class="img"><img src="img/about03.jpg" alt="교육소개"></p>
                         <div class="text">
                             <h3>자격증 과정</h3>
                             <p>웹 디자인 기능사부터 컴퓨터그래픽스 운용기능사 까지</p>
