--- a/Day17~20/index.html
+++ b/Day17~20/index.html
@@ -128,10 +128,229 @@
         </section>
 
 
+        <!-- 섹션 - 서비스 -->
+        <section class="service">
+
+            <div class="title">
+                <h2>About Service<span>!</span></h2>
+                <p>아카데미에서 제공하는 <br class="mo"> 다양한 교육 컨텐츠를 소개합니다.</p>
+            </div>
+
+            <ul class="service-list">
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service01.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service02.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service03.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service04.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service05.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service01.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service02.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service03.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service04.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="card">
+                        <div class="card-img">
+                            <img src="img/service05.jpg" alt="">
+                        </div>
+                        <div class="card-info">
+                            <h2>웹 디자인 입문</h2>
+                            <p>OOO 강사</p>
+                            <div class="star-box">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star1.png" alt="평점">
+                                <img src="img/star2.png" alt="평점">
+                                <span>(100)</span>
+                            </div>
+                            <a href="#" class="btn">자세히 보기</a>
+                        </div>
+                    </div>
+                </li>
+               
+            </ul>
+
+        </section>
+
+
         <!-- 푸터 -->
         <footer>
             <div class="inner">
-                <h2 class="footer-logo"><a href="https://sbsart.com"></a></h2>
+                <h2 class="footer-logo">
+                    <a href="https://sbsart.com">
+                        <img src="img/logo.png" alt="로고">
+                    </a>
+                </h2>
                 <ul class="address">
                     <li>01695 서울특별시 노원구 노해로83길 21</li>
                     <li>Copyright 2021.</li>
