--- a/Day03/02_입력양식/form.html
+++ b/Day03/02_입력양식/form.html
@@ -67,11 +67,15 @@
 	 
 	 <!-- 여기에 작성해보세요:) -->
 	 <form action="login" method="post">
-		<input type="text" name="input1">   <br>
-		<input type="text" name="input2">	<br>
+		<label for="id">아이디</label>
+		<input type="text" name="input1"> <br>
+
+		<label for="id">비밀번호</label>
+		<input type="password" name="input2"> <br>
+
 		<input type="submit" value="전송">
 	 </form>
-
+	 
 	 <hr>
 	 
 	 <!-- 여기에 작성해보세요:) -->
@@ -112,10 +116,15 @@
 		range				: <input type="range" name="range" min="1" max="100" step="1"> <br>
 		<br>
 
+
+		<textarea name="content" cols="30" rows="10"></textarea>
+		<br>
+		
 		<input type="reset" value="다시작성">
 		<input type="submit" value="제출">
 
 	 </form>
+	
 	 
 	 
 </body>
