--- a/Day04/02_div_layout.html
+++ b/Day04/02_div_layout.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Layouts</title>
-
+    <!-- 폰트 -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
         * {
             box-sizing: border-box;
@@ -13,7 +14,7 @@
         }
 
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
         }
 
         #header {
@@ -23,15 +24,15 @@
 
         #nav {
             background-color: #339999;
-            color: white;
+            color: wheat;
             width: 200px;
             height: 300px;
             float: left;
         }
 
         #section {
-            width: calc(100%-200px);
-            text-align: left;
+            width: calc(100% - 200px);
+            text-align: left;;
             float: left;
             padding: 10px;
         }
@@ -46,10 +47,10 @@
         #header, #footer { line-height: 100px; }
         #nav, #section { line-height: 240px; }
 
+        
     </style>
 </head>
 <body>
-    
     <h1>div 요소를 이용한 레이아웃</h1>
     <div id="header">
         <h2>HEADER 영역</h2>
